asset/sass/blocks/_version-selector.scss
.version-selector {
    display: inline;

    .dropdown {
        &-toggle {
            padding: 8px 13px;
            background-color: var(--primary-color);
            border-color: transparentize($header-footer-font-color, 0.7);
            color: $header-footer-font-color;
        }

        &-menu {
            color: $body-color;
            border: 1px solid $separater-color;
            box-shadow: none;
            background-color: var(--primary-color);
        }

        &-item {
            &.active {
                background-color: rgba(255, 255, 255, .3);
            }
        }
    }
}

